# plausible-cli

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: ci.yml  release.yml
docs/: 000-v1-plan.md  architeture.md  llms-full.txt
homebrew/Formula/: plausible.rb
src/: lib.rs  main.rs
src/cli/: mod.rs
src/client/: mod.rs
src/config/: accounts.rs  mod.rs
src/queue/: mod.rs
src/rate_limit/: mod.rs
tests/: cli_snapshots.rs
tests/snapshots/: cli_snapshots__accounts_list_empty.snap  cli_snapshots__accounts_list_json.snap  cli_snapshots__events_template_json.snap  cli_snapshots__queue_inspect_empty_json.snap
