[package]
name = "plausible-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
directories = "5"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "brotli", "gzip", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
url = "2"
governor = { version = "0.6", default-features = false, features = ["std", "jitter"] }
time = { version = "0.3", features = ["serde", "macros", "formatting", "parsing"] }
async-trait = "0.1"
clap = { version = "4.5", features = ["derive", "env"] }
tabled = "0.15"

[dev-dependencies]
tempfile = "3"
httpmock = "0.7"
