[package]
name = "plausible-cli"
version = "2.0.0"
edition = "2021"
description = "Command-line interface for Plausible Analytics with rate-limit aware queueing and multi-account support"
license = "MIT"
repository = "https://github.com/vicentereig/plausible-cli"
homepage = "https://github.com/vicentereig/plausible-cli"
documentation = "https://github.com/vicentereig/plausible-cli/blob/main/docs/llms-full.txt"
readme = "README.md"
authors = ["Vicente Reig Rincon de Arellano <hey@vicente.services>"]
keywords = ["analytics", "plausible", "cli", "automation", "http-client"]
categories = ["command-line-utilities", "web-programming::http-client"]

[[bin]]
name = "plausible"
path = "src/main.rs"

[dependencies]
directories = "5"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "brotli", "gzip", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
url = "2"
governor = { version = "0.6", default-features = false, features = ["std", "jitter"] }
time = { version = "0.3", features = ["serde", "macros", "formatting", "parsing"] }
async-trait = "0.1"
clap = { version = "4.5", features = ["derive", "env"] }
tabled = "0.15"
keyring = "2"
regex = "1"

[dev-dependencies]
tempfile = "3"
httpmock = "0.7"
assert_cmd = "2"
insta = { version = "1.38", features = ["glob"] }
